apps/openobject/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openobject
  namespace: publicground
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "openobject.dmn-poc.publicground.nl"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: openobject
      port: 80
      weight: 1
